Wrote brute force of day 8 part B
Need an alternate way as it'll take a very long time to step through them all

--- a/Day08/Day08.csproj
+++ b/Day08/Day08.csproj
@@ -11,6 +11,9 @@
     <None Update="PuzzleInput-full.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="PuzzleInput-test-PartA.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="PuzzleInput-test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
